# numble-solver

./: README.md  numble_solver.py  pyproject.toml
