[project]
name = "numble-solver"
description = "A Python script to solve Numble puzzles"
version = "0.0.1"
requires-python = ">=3.12"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 2

[tool.pylint.FORMAT]
max-line-length = 120

[tool.mypy]
disallow_untyped_calls = true
mypy_path = "stubs"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
]
